Removed manual port entry field